--- a/app/src/main/res/layout/product_list_element_layout.xml
+++ b/app/src/main/res/layout/product_list_element_layout.xml
@@ -23,28 +23,6 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
-        <FrameLayout
-            android:layout_width="250dp"
-            android:layout_height="150dp"
-            android:layout_weight="1">
-
-            <ProgressBar
-                android:id="@+id/list_element_loading_circle"
-                style="?android:attr/progressBarStyle"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center" />
-
-            <ImageView
-                android:id="@+id/product_image"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_marginEnd="25dp"
-                android:layout_weight="1"
-                android:adjustViewBounds="true"
-                tools:srcCompat="@tools:sample/backgrounds/scenic" />
-        </FrameLayout>
-
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -88,6 +66,28 @@
                 android:text="TextView"
                 android:textColor="@android:color/black" />
 
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:orientation="horizontal">
+
+            <Spinner
+                android:id="@+id/number_to_add_spinner"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical|end"
+                android:spinnerMode="dropdown" />
+
+            <Button
+                android:id="@+id/add_button"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:layout_gravity="center_vertical|end"
+                android:layout_weight="0"
+                android:background="@drawable/ic_add_shopping_cart_black_24dp" />
         </LinearLayout>
 
     </LinearLayout>
