--- a/app/src/main/res/layout/product_list_element_layout.xml
+++ b/app/src/main/res/layout/product_list_element_layout.xml
@@ -82,7 +82,7 @@
                 android:spinnerMode="dropdown" />
 
             <Button
-                android:id="@+id/add_button"
+                android:id="@+id/action_button"
                 android:layout_width="50dp"
                 android:layout_height="50dp"
                 android:layout_gravity="center_vertical|end"
