--- a/app/src/main/res/layout/fragment_edit_product.xml
+++ b/app/src/main/res/layout/fragment_edit_product.xml
@@ -31,6 +31,14 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent">
 
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
+                android:layout_marginTop="15dp"
+                android:text="Edit this product"
+                android:textSize="30sp" />
+
             <EditText
                 android:id="@+id/product_name_edit_text"
                 android:layout_width="wrap_content"
@@ -106,6 +114,13 @@
                     app:layout_constraintStart_toEndOf="@+id/product_cost_edit_text"
                     app:layout_constraintTop_toBottomOf="@+id/product_desc_edit_text" />
             </LinearLayout>
+
+            <Button
+                android:id="@+id/submit_button"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="15dp"
+                android:text="Submit" />
         </LinearLayout>
     </android.support.v7.widget.CardView>
 
