--- a/app/src/main/res/layout/fragment_edit_product.xml
+++ b/app/src/main/res/layout/fragment_edit_product.xml
@@ -21,6 +21,17 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
+        <CheckBox
+            android:id="@+id/switch_active_check"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="start|top"
+            android:layout_marginStart="-5dp"
+            android:layout_marginTop="20dp"
+            android:text="Active"
+            android:textAlignment="center"
+            android:textSize="10sp" />
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
