--- a/app/src/main/res/layout/product_list_element_layout.xml
+++ b/app/src/main/res/layout/product_list_element_layout.xml
@@ -4,10 +4,14 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginStart="8dp"
+    android:layout_marginStart="15dp"
     android:layout_marginTop="15dp"
-    android:layout_marginEnd="8dp"
-    android:layout_marginBottom="15dp">
+    android:layout_marginEnd="15dp"
+    android:layout_marginBottom="15dp"
+    android:paddingStart="15dp"
+    android:paddingTop="15dp"
+    android:paddingEnd="15dp"
+    android:paddingBottom="15dp">
 
     <LinearLayout
         android:id="@+id/left_linear_layout"
