--- a/app/src/main/res/layout/fragment_edit_supplier.xml
+++ b/app/src/main/res/layout/fragment_edit_supplier.xml
@@ -9,9 +9,7 @@
 
     <android.support.v7.widget.CardView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="15dp"
-        android:layout_marginEnd="15dp"
+        android:layout_height="0dp"
         app:cardCornerRadius="5dp"
         app:cardElevation="2dp"
         app:contentPadding="25dp"
@@ -24,6 +22,7 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_gravity="center"
             android:orientation="vertical"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
@@ -72,7 +71,7 @@
                     android:id="@+id/supplier_product_list"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:orientation="vertical"/>
+                    android:orientation="vertical" />
             </ScrollView>
 
             <Button
